--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrew Dai Truong | Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <!------------------ NAVBAR ------------------>
 <body>
@@ -30,7 +31,7 @@
                 <span class="status-dot"></span>
                 <span class="status-text">Available for work</span>
             </div>
-        <p class="hero-desc">Full-Stack Developer specializing in Python and Network Infrastructure.</p>
+        <p class="hero-desc">Graduated in Dec 2025 from California State University, Fullerton with a Bachelor of Science, Computer Science.</p>
     </div>
 </header>
 
@@ -38,10 +39,10 @@
     <div class="about-container">
         <div class="about-text">
             <h3>About Me</h3>
-            <p>I build robust back-end systems with Python and Flask, while maintaining a strong interest in network security and homelab management.</p>
+            <p>I am a recent graduate with an aspiration to work in the field of software development and/or network infrastructure</p>
         </div>
         <div class="about-map">
-            <div class="map-placeholder">Based in Garden Grove, CA</div>
+            <div id="map" style="width: 100%; height: 250px; border-radius: 15px;"></div>
         </div>
     </div>
 </section>
@@ -60,6 +61,7 @@
 </footer>
 
 <script src="script.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 </body>
 </html>
