--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrew Dai Truong | Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <!------------------ NAVBAR ------------------>
 <body>
@@ -39,7 +38,7 @@
     <div class="about-container">
         <div class="about-text">
             <h3>About Me</h3>
-            <p>I am a recent graduate with an aspiration to work in the field of software development and/or network infrastructure</p>
+            <p>I am a recent graduate with an aspiration to work in the field of software development and network infrastructure</p>
         </div>
         <div class="about-map">
             <div id="map" style="width: 100%; height: 250px; border-radius: 15px;"></div>
@@ -61,7 +60,6 @@
 </footer>
 
 <script src="script.js"></script>
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 </body>
 </html>
