--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrew Dai Truong | Portfolio</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 <!------------------ NAVBAR ------------------>
 <body>
     <nav class="navbar">
@@ -17,6 +18,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
     </ul>
 </nav>
 
@@ -52,6 +54,19 @@
         <div class="project-card">League of Legends Predictor</div>
         <div class="project-card">Gym Flow Capstone</div>
         <div class="project-card">Odoo Automation</div>
+    </div>
+</section>
+
+<section id="contact" class="parallax-section contact-bg">
+    <div class ="contact-container">
+        <div class = "contact-text">
+            <h2>Get In Touch</h2>
+            <p>Feel free to reach out to me</p>
+            <div class="contact-link">
+                <i class = "fas fa-envelope"></i>
+                <p>andrewdaitruong@outlook.com</p>
+            </div>
+        </div>
     </div>
 </section>
 
