--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,7 +31,11 @@
                 <span class="status-dot"></span>
                 <span class="status-text">Available for work</span>
             </div>
-        <p class="hero-desc">Graduated in Dec 2025 from California State University, Fullerton with a Bachelor of Science, Computer Science.</p>
+        <p class="hero-desc">
+            Graduated in Dec 2025 from California State 
+            University, Fullerton with a Bachelor of Science, 
+            Computer Science.
+        </p>
     </div>
 </header>
 
@@ -39,7 +43,7 @@
     <div class="about-container">
         <div class="about-text">
             <h3>About Me</h3>
-            <p>I am a recent graduate with an aspiration to work in the field of software development and network infrastructure</p>
+            <p>I am a recent graduate with an aspiration to work in the software field and network infrastructure</p>
         </div>
         <div class="about-map">
             <div id="map" style="width: 100%; height: 250px; border-radius: 15px;"></div>
