--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
+        <li><a href="#resume">Resume</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
 </nav>
@@ -57,6 +58,56 @@
         <div class="project-card">League of Legends Predictor</div>
         <div class="project-card">Gym Flow Capstone</div>
         <div class="project-card">Odoo Automation</div>
+    </div>
+</section>
+
+<section id="resume" class="parallax-section resume-bg">
+    <div class="box resume-container">
+        <div class="resume-header">
+            <h2 class="section-title">Experience & Skills</h2>
+            <a href="assets/Andrew_Dai_Truong_Resume.pdf" class="download-btn" target="_blank">
+                <i class="fas fa-download"></i> Download Resume
+            </a>
+        </div>
+
+        <div class="resume-columns">
+            <div class="experience-col">
+                <h3>Experience</h3>
+                <div class="exp-item">
+                    <h4>Software Testing Intern — Monster Beverage Co.</h4>
+                    <p class="date">May 2024 - Aug 2024</p>
+                    <ul>
+                        <li>Configuring Conga Contract Lifecycle Management (CLM) within Salesforce environment</li>
+                        <li>Conduct software testing for all changes manually </li>
+                        <li>Collaborate with other members to create new features ensuring quality and reliability</li><br>
+                    </ul>
+                    <h4>Resort Transportation and Parking — Walt Disney Co.</h4>
+                    <p class="date">Aug 2019 - Dec 2022</p>
+                    <ul>
+                        <li>Follow and enforce safety protocols amongst cast members and guests </li>
+                        <li>Ensure all guests leaves in a happy mood in and out of the park</li>
+                        <li>Transport guests and cast members to their desired location onstage and backstage</li>
+                </div>
+            </div>
+
+            <div class="skills-col">
+                <h3>Skills</h3>
+                
+                <div class="skill-group">
+                    <p><i class="fas fa-code"></i> Languages & Frameworks</p>
+                    <div class="skill-tags">
+                        <span>Python</span><span>Flask</span><span>MySQL</span><span>OpenCV</span>
+                    </div>
+                </div>
+
+                <div class="skill-group">
+                    <p><i class="fas fa-network-wired"></i> Network & Tools</p>
+                    <div class="skill-tags">
+                        <span>Docker</span><span>UniFi</span><span>Git</span><span>Wireshark</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
