--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <li>Conduct software testing for all changes manually </li>
                         <li>Collaborate with other members to create new features ensuring quality and reliability</li><br>
                     </ul>
-                    <h4>Resort Transportation and Parking — Walt Disney Co.</h4>
+                    <h4>Resort Transportation and Parking — The Walt Disney Co.</h4>
                     <p class="date">Aug 2019 - Dec 2022</p>
                     <ul>
                         <li>Follow and enforce safety protocols amongst cast members and guests </li>
@@ -103,7 +103,7 @@
                 <div class="skill-group">
                     <p><i class="fas fa-network-wired"></i> Network & Tools</p>
                     <div class="skill-tags">
-                        <span>Docker</span><span>UniFi</span><span>Git</span><span>Wireshark</span>
+                        <span>Docker</span><span>UniFi</span><span>Git</span><span>VSCode</span>
                     </div>
                 </div>
             </div>
